- Added Axes - Fixed cropping issues

--- a/style.css
+++ b/style.css
@@ -5,3 +5,26 @@
     background-color: black;
     margin-right: 0.5em;
 }
+
+.chart{
+  padding: 1.5em;
+}
+
+.values{
+  text-anchor:middle;
+  font-family:sans-serif;
+  font-size:0.5px;
+  fill: white;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
